--- a/version1/crossSitRep_v1.html
+++ b/version1/crossSitRep_v1.html
@@ -428,7 +428,7 @@ function startExperiment(data, tabletop) {
 		display_element: $('#jspsych-target'),
 		timeline: timeline,
 		show_progress_bar: true,
-		//fullscreen: true,
+		fullscreen: true,
 		default_iti: 0,
 		on_finish: function(data) {
 			//for testing: display data and store locally
