--- a/version1/crossSitRep_v1.html
+++ b/version1/crossSitRep_v1.html
@@ -414,11 +414,8 @@ function updateLoadedCount(nLoaded){
  }
 
 //run this line instead if we add audio
-// jsPsych.pluginAPI.preloadImages(imageSet, function(){ jsPsych.pluginAPI.preloadAudioFiles(allAudio, function() {startExperiment(); },function(nLoaded) { updateLoadedCount(nLoaded); });});
+jsPsych.pluginAPI.preloadImages(imageSet, function(){ jsPsych.pluginAPI.preloadAudioFiles(allAudio, function() {startExperiment(); },function(nLoaded) { updateLoadedCount(nLoaded); });});
 
-
-jsPsych.pluginAPI.preloadAudioFiles(allAudio, function() {startExperiment(); },function(nLoaded) { updateLoadedCount(nLoaded); });
-  
   
 // START & RUN EXPERIMENT
 // including unctions that handle storing the data
