--- a/version1/crossSitRep_v1.html
+++ b/version1/crossSitRep_v1.html
@@ -272,7 +272,7 @@ var testList=[];
 // put in instructions about being fast here if we are interested in RTs
 var labelTestInstr = {
 type: 'instructions',
-pages: ['Now we will test how well you learned the words. You will see a word and be asked to choose which of the two pictured objects goes with the word. In each trial, click START AUDIO. The word for one of the objects will be played. Click on the object you think the word refers to. Click NEXT to get started.'],
+pages: ['Now we will test how well you learned the words. You will hear a word and be asked to choose which of the two pictured objects goes with the word. In each trial, click START AUDIO. The word for one of the objects will be played. Click on the object you think the word refers to. Click NEXT to get started.'],
 show_clickable_nav: true
 }
 
