--- a/experiments/version2/crossSitRep_v2.html
+++ b/experiments/version2/crossSitRep_v2.html
@@ -254,7 +254,7 @@ for (j = 0; j < trial_info_training.length;  j++){
 	if (j % 4 == 0 & j > 0) {
 		
 		var test_memory = {
-			type: 'survey_text',
+			type: 'production-memory',
 			sequence: cur_number_sequence,
 			choices: ['ENTER'],
 			data: {trialNum: trialNum_counter, trialType: "memory_response"}
