--- a/experiments/version2/crossSitRep_v2.html
+++ b/experiments/version2/crossSitRep_v2.html
@@ -201,7 +201,9 @@ console.log(instruction_info)
 
 var instruction_info_2 = "Make sure your audio is still on, then click NEXT to begin."
 
-var instruction_pages = [instruction_info,instruction_info_2];
+//var instruction_pages = [instruction_info,instruction_info_2];
+
+var instruction_pages = [instruction_info];
 
 console.log(instruction_pages);
 
