--- a/experiments/version2/crossSitRep_v2.html
+++ b/experiments/version2/crossSitRep_v2.html
@@ -222,7 +222,7 @@ var trialNum_counter=0;
 
 var cur_number_sequence = "";
 var even_counter = 0;
-var num_array = ["0","1","2","3","4","5","6","7","8","9"];
+var num_array = ["1","2","3","4","5","6","7","8","9"];
 
 for (j = 0; j < trial_info_training.length;  j++){
 	
